--- a/css/style.css
+++ b/css/style.css
@@ -1,48 +1,50 @@
-﻿.wrapper {height: 1920px;
+﻿.wrapper {
+    height: 1920px;
     width: 1080px;
 }
 
-.content {
-    
-}
+.content {}
 
 body {
     font-family: 'AU Passata', Calibri, Arial;
-    margin:0 auto;
-    background-color:#ffff ;
-    color:white;
+    margin: 0 auto;
+    background-color: #ffff;
+    color: white;
     text-align: center;
-    margin-left: 4%;
-    margin-right: 0%;
-    
+    width: 1000px;
+
 }
-h1{color: #056947;
+
+h1 {
+    color: #056947;
     font-size: 5.5em;
     padding-top: 5%;
     text-align: center;
     margin-right: 5%;
-    
-    
+
+
 }
 
 #first {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     margin-top: 3%;
-    
+
 }
+
 #headphone1 {
     max-width: 10%;
-    padding-left: 10%;
     padding-top: 6%;
 }
 
-hr { background-color:#691805;
+hr {
+    background-color: #691805;
     height: 5px;
     border: 0;
 }
 
-P { color: #056947;
+P {
+    color: #056947;
     font-size: 2.6em;
     text-align: left;
     padding-left: 5%;
@@ -52,105 +54,134 @@ P { color: #056947;
 }
 
 
-h2{
-    font-weight:normal;
-   
+h2 {
+    font-weight: normal;
+
     color: #056947;
     font-size: 3em;
     margin-top: 5%;
     padding-bottom: 3%;
 }
 
-#tooth {max-width: 500px;
-        padding-right: 30%;
-        padding-left: 30%;
-        margin-bottom: 5%;
-    
+#tooth {
+    max-width: 500px;
+    padding-right: 30%;
+    padding-left: 30%;
+    margin-bottom: 5%;
+
 }
 
-#start { max-width: 45%;
-         float: none;
-         margin-top: 5%;
+#start {
+    max-width: 45%;
+    float: none;
+    margin-top: 5%;
 }
 
 
 
 
 
-h3 {font-weight:normal;
-    margin:3px 0px;
+h3 {
+    font-weight: normal;
+    margin: 3px 0px;
     color: #056947;
 }
 
-#container {position: inherit;}
-
-#text { max-width: 70%;
-        position:absolute;
-        right: 0;
-        margin-right: 5%;
-}
- 
-#hr {margin-left: 4%;
-    
+#container {
+    position: inherit;
 }
 
-.button {max-width: 200px;
-         margin-bottom: 18%;
+#text {
+    display: grid;
+    grid-template-areas:
+        'icons icons heading heading' 
+        'icons icons paragraph paragraph';
 }
 
-#icons {margin-right: 75%;
-        padding-top: 8%;
+.item1 {
+    grid-area: heading;
 }
-#objects {float: none;
+
+.item2 {
+    grid-area: paragraph;
+}
+
+.item3 {
+    grid-area: icons;
+    align-self: flex-end;
+    margin-top: 51px;
+    margin-right: 50px;
+    align-content: space-between;
+
+}
+
+#hr {
+    margin-left: 4%;
+
+}
+
+#icons img {
+    width: 100%;
+    padding: 0 25px 20px 0;
+}
+
+.button {
+    max-width: 200px;
+    margin-bottom: 18%;
 }
 
 
-#object1{max-width: 600px;
-       margin-left: 25%;
-       position: inherit;
+#objects {
+    float: none;
+}
+
+
+#object1 {
+    max-width: 600px;
+    margin-left: 25%;
+    position: inherit;
     margin-top: 3%;
 }
 
 
 
-#middle {display: flex;
-         justify-content: space-between;
+#middle {
+    display: flex;
+    justify-content: space-between;
     padding-right: 0%;
 }
 
 
-#puzzle{padding-top: 10%;
-    
+#puzzle {
+    padding-top: 10%;
+
 }
 
 
-#last {display: flex;
-       justify-content: space-between;
-       padding-left: 9%;
-       padding-right: 9%;
-       margin-top: 1%;
+#last {
+    display: flex;
+    justify-content: space-between;
+    padding-left: 9%;
+    padding-right: 9%;
+    margin-top: 1%;
     margin-bottom: 3%;
 }
 
-#center {
-    
-    
-}
+#center {}
 
 
-.play{
-    color:white;
-    text-decoration:none;
-    background-color:white;
-    color:#691805;
+.play {
+    color: white;
+    text-decoration: none;
+    background-color: white;
+    color: #691805;
     padding: 10px 50px 10px 50px;
     text-transform: uppercase;
     font-weight: bold;
-    font-size:2em;
+    font-size: 2em;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
     border-top-right-radius: 10px;
     border-top-left-radius: 10px;
-    
-}
 
+}
