--- a/css/image-puzzle.css
+++ b/css/image-puzzle.css
@@ -1,24 +1,15 @@
 ﻿#collage hr{
     border:none;
-    border-top:2px solid #f5f2f2;
     height:1px;
 }
 
 #collage #playPanel {
-    background-color:white;
     padding:10px 0px;
     margin: 10px auto;
-    max-width:400px;
     width:95%;
+    margin-bottom:100px;
 }
 
-#collage #actualImageBox {
-    display: inline-block;
-    font-size:0.8em;
-    margin: 10px 10px;
-    vertical-align: top;
-    width:280px;
-}
 
 #collage #stepBox, #collage #timeBox {
     display:inline-block;
@@ -44,7 +35,8 @@
     display: inline-block;
     margin: 10px;
     padding: 0;
-    width: 400px;
+    width: 1000px;
+    height: 1000px;
     
 }
 
